<?xml version="1.0" encoding="utf-8"?>
<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchTopMenu"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/calendar_month"
        android:icon="@drawable/calendar_month"
        android:title="@string/calendar_month"
        app:showAsAction="ifRoom"/>

<!--    <item-->
<!--        android:id="@+id/add_calendar"-->
<!--        android:icon="@drawable/add_calendar"-->
<!--        android:title="@string/add_calendar"-->
<!--        app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/logout_menu"
        android:icon="@drawable/door_red"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>