<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.EventsDay.EventsDay">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/exit"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header_day"
            android:layout_marginTop="20px"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header_time_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/header_time_start"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header_time_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/header_time_end"
                android:textColor="@color/black"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/header_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/header_event_description"
                android:textColor="@color/black"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerEvents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/section_header"
            android:layout_margin="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>