<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/authorization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/authorization"
            app:icon="@drawable/logout"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/authorization"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/registration"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionCreateNameAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/header"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/holo_blue_dark"
            app:startIconTint="@android:color/black"
            app:endIconTint="@android:color/holo_red_light"
            app:boxStrokeColor="@android:color/holo_green_light"
            android:hint="@string/enter_create_account"
            app:hintTextColor="@android:color/holo_blue_light"
            app:startIconDrawable="@drawable/keyboard"
            app:startIconContentDescription="@string/enter_create_account"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/exit"
            app:endIconContentDescription="@string/enter_create_account"
            app:boxStrokeWidthFocused="4dp"
            app:helperTextEnabled="true"
            app:helperText="@string/enter_create_account"
            app:helperTextTextColor="@android:color/holo_orange_dark"
            app:suffixText="@string/enter_create_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNameAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@android:color/black"
                app:backgroundTint="@android:color/holo_orange_dark"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sectionCreateCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionCreateNameAccount"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@android:color/holo_blue_dark"
            app:startIconTint="@android:color/black"
            app:endIconTint="@android:color/holo_red_light"
            app:boxStrokeColor="@android:color/holo_green_light"
            android:hint="@string/enter_create_code"
            app:hintTextColor="@android:color/holo_blue_light"
            app:startIconDrawable="@drawable/keyboard"
            app:startIconContentDescription="@string/enter_create_code"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/exit"
            app:endIconContentDescription="@string/enter_create_code"
            app:boxStrokeWidthFocused="4dp"
            app:helperTextEnabled="true"
            app:helperText="@string/enter_create_code"
            app:helperTextTextColor="@android:color/holo_orange_dark"
            app:suffixText="@string/enter_create_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="4"
                android:inputType="numberPassword"
                android:textColor="@android:color/black"
                app:backgroundTint="@android:color/holo_orange_dark"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sectionCreateCode"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/registration"
            app:icon="@drawable/logout"/>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/registration"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>