<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ScreenApp">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/sectionTopBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/AppBarLayoutID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    style="@style/Widget.MaterialComponents.Toolbar.Primary"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/black"
                    app:menu="@menu/top_menu"
                    app:navigationIcon="@drawable/menu"
                    app:title="@string/calendar"
                    app:titleTextColor="@color/white"/>



            </com.google.android.material.appbar.AppBarLayout>


<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/fab"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="bottom|right"-->
<!--                android:layout_margin="16dp"-->
<!--                android:contentDescription="@string/add_calendar"-->
<!--                android:src="@drawable/add_calendar"-->
<!--                app:backgroundTint="@color/black"-->
<!--                app:tint="#EA0C0C" />-->



        </androidx.coordinatorlayout.widget.CoordinatorLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/main_menu_header"
            app:menu="@menu/main_menu" />


        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/groups"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="95dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/message_not_groups"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/message_not_groups"
            android:textAlignment="center"
            android:layout_marginTop="95dp"
            />




    </androidx.drawerlayout.widget.DrawerLayout>









    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_calendar"
            android:src="@drawable/add_calendar"
            app:backgroundTint="@color/black"
            app:tint="#EA0C0C"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>





</androidx.constraintlayout.widget.ConstraintLayout>