<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.Groups.AddEventGroup">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
        android:text="Создать события"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/section_enter_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header_screen"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@android:color/holo_blue_dark"
        app:startIconTint="@android:color/black"
        app:endIconTint="@android:color/holo_red_light"
        app:boxStrokeColor="@android:color/holo_green_light"
        android:hint="@string/header_event_group_day"
        app:hintTextColor="@android:color/holo_blue_light"
        app:startIconDrawable="@drawable/keyboard"
        app:startIconContentDescription="@string/header_event_group_day"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/exit"
        app:endIconContentDescription="@string/header_event_group_day"
        app:boxStrokeWidthFocused="4dp"
        app:helperTextEnabled="true"
        app:helperText="@string/header_event_group_day"
        app:helperTextTextColor="@android:color/holo_orange_dark"
        app:suffixText="@string/header_event_group_day">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/holo_orange_dark"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/section_enter_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/section_enter_day"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@android:color/holo_blue_dark"
        app:startIconTint="@android:color/black"
        app:endIconTint="@android:color/holo_red_light"
        app:boxStrokeColor="@android:color/holo_green_light"
        android:hint="@string/header_event_group_month"
        app:hintTextColor="@android:color/holo_blue_light"
        app:startIconDrawable="@drawable/keyboard"
        app:startIconContentDescription="@string/header_event_group_month"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/exit"
        app:endIconContentDescription="@string/header_event_group_month"
        app:boxStrokeWidthFocused="4dp"
        app:helperTextEnabled="true"
        app:helperText="@string/header_event_group_month"
        app:helperTextTextColor="@android:color/holo_orange_dark"
        app:suffixText="@string/header_event_group_month">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/holo_orange_dark"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/section_enter_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/section_enter_month"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@android:color/holo_blue_dark"
        app:startIconTint="@android:color/black"
        app:endIconTint="@android:color/holo_red_light"
        app:boxStrokeColor="@android:color/holo_green_light"
        android:hint="@string/header_event_group_year"
        app:hintTextColor="@android:color/holo_blue_light"
        app:startIconDrawable="@drawable/keyboard"
        app:startIconContentDescription="Год"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/exit"
        app:endIconContentDescription="@string/header_event_group_year"
        app:boxStrokeWidthFocused="4dp"
        app:helperTextEnabled="true"
        app:helperText="@string/header_event_group_year"
        app:helperTextTextColor="@android:color/holo_orange_dark"
        app:suffixText="@string/header_event_group_year">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/holo_orange_dark"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/section_enter_time_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/section_enter_year"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@android:color/holo_blue_dark"
        app:startIconTint="@android:color/black"
        app:endIconTint="@android:color/holo_red_light"
        app:boxStrokeColor="@android:color/holo_green_light"
        android:hint="@string/header_event_group_time_start"
        app:hintTextColor="@android:color/holo_blue_light"
        app:startIconDrawable="@drawable/keyboard"
        app:startIconContentDescription="@string/header_event_group_time_start"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/exit"
        app:endIconContentDescription="@string/header_event_group_time_start"
        app:boxStrokeWidthFocused="4dp"
        app:helperTextEnabled="true"
        app:helperText="@string/header_event_group_time_start"
        app:helperTextTextColor="@android:color/holo_orange_dark"
        app:suffixText="@string/header_event_group_time_start">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_time_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/holo_orange_dark"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/section_enter_time_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/section_enter_time_start"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@android:color/holo_blue_dark"
        app:startIconTint="@android:color/black"
        app:endIconTint="@android:color/holo_red_light"
        app:boxStrokeColor="@android:color/holo_green_light"
        android:hint="@string/header_event_group_time_end"
        app:hintTextColor="@android:color/holo_blue_light"
        app:startIconDrawable="@drawable/keyboard"
        app:startIconContentDescription="Год"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/exit"
        app:endIconContentDescription="@string/header_event_group_time_end"
        app:boxStrokeWidthFocused="4dp"
        app:helperTextEnabled="true"
        app:helperText="@string/header_event_group_time_end"
        app:helperTextTextColor="@android:color/holo_orange_dark"
        app:suffixText="@string/header_event_group_time_end">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_time_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/holo_orange_dark"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/section_enter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/section_enter_time_end"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@android:color/holo_blue_dark"
        app:startIconTint="@android:color/black"
        app:endIconTint="@android:color/holo_red_light"
        app:boxStrokeColor="@android:color/holo_green_light"
        android:hint="@string/header_event_group_description"
        app:hintTextColor="@android:color/holo_blue_light"
        app:startIconDrawable="@drawable/keyboard"
        app:startIconContentDescription="@string/header_event_group_description"
        app:endIconMode="clear_text"
        app:endIconDrawable="@drawable/exit"
        app:endIconContentDescription="@string/header_event_group_description"
        app:boxStrokeWidthFocused="4dp"
        app:helperTextEnabled="true"
        app:helperText="@string/header_event_group_description"
        app:helperTextTextColor="@android:color/holo_orange_dark"
        app:suffixText="@string/header_event_group_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enter_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:inputType="text"
            android:textColor="@android:color/black"
            app:backgroundTint="@android:color/holo_orange_dark"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/message_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/section_enter_description"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:text="Создать событие"
        app:layout_constraintTop_toBottomOf="@id/message_error"/>



</androidx.constraintlayout.widget.ConstraintLayout>